# ai-tg-bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  SYS_PROMPT.md  compact_api.txt  docker-compose.opensandbox.dev.yml  docker-compose.opensandbox.yml  docker-compose.postgres.yml  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  system_prompt.md  tsconfig.json
.github/workflows/: docker.yml  publish-ai-agent-box.yml  publish-container.yml
bot/: __init__.py  config.py  polling.py
bot/ai/: __init__.py  openrouter.py  tika.py  tools.py
bot/database/: __init__.py  models.py  repository.py
bot/telegram/: bot.py  (+3 more)
docker/: entrypoint.sh
docs/: CODEBASE_MAP.md
locales/: en.ftl  ru.ftl
scripts/: boxlite-live-config.ts  compacted-book-retrieval-check.ts  dump-stream-parts.ts  external-sample-ingest-check.ts  live-boxlite-check.ts  live-boxlite-python-check.ts  live-boxlite-workspace-check.ts  live-codex-check.ts  live-opensandbox-check.ts  live-opensandbox-turn-check.ts  live-pi-check.ts  live-telegram-restore.ts  live-workflow-check.ts  migrate-boxlite-data.ts  migrate-sandbox-data.ts
src/: ai.ts  commands.ts  config.ts  domain.ts  index.ts  logger.ts  main.ts  prompt.ts  text.ts  threading.ts
templates/: ai-tg-bot.xml  opensandbox-server.xml
tests/: ai-overflow.test.ts  commands.integration.test.ts  draft-stream.integration.test.ts  incoming-message.test.ts  prompt.test.ts  repository.integration.test.ts  telegram-api.test.ts  telegram-outbound.test.ts  thread-manager.test.ts  threading.test.ts
(+181 files in other folders)
